name:               bradrn-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , text == 1.2.*
                  , aeson == 2.0.*
                  , bytestring == 0.10.*
                  , pandoc == 2.18.*
                  , pandoc-types == 1.22.*
                  , transformers == 0.5.*
                  , yaml == 0.11.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
